--- a/day-01/package.json
+++ b/day-01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3d-countdown",
+  "name": "day-01",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/three": "^0.170.0",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
